--- a/.github/workflows/backend_build_and_test.yml
+++ b/.github/workflows/backend_build_and_test.yml
@@ -8,9 +8,9 @@ permissions:
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
 
 jobs:
   build:
