--- a/.github/workflows/frontend_build_and_test.yml
+++ b/.github/workflows/frontend_build_and_test.yml
@@ -2,16 +2,16 @@ name: Build and Test Frontend
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Buld and Test with Node.js 18.x
+    - name: Build and Test with Node.js 18.x
       uses: actions/setup-node@v3
       working-directory: ./portal-frontend
       with:
