--- a/.github/workflows/frontend_build_and_test.yml
+++ b/.github/workflows/frontend_build_and_test.yml
@@ -5,7 +5,9 @@ on:
     branches: [ "main", "master" ]
   pull_request:
     branches: [ "main", "master" ]
-
+defaults:
+  run:
+    working-directory: ./portal-frontend
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,7 +15,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build and Test with Node.js 18.x
       uses: actions/setup-node@v3
-      working-directory: ./portal-frontend
       with:
         node-version: 18.x
         cache: 'npm'
